prevent h-scrollbar on small screen via x-overflowing

--- a/django/contrib/admin/static/admin/css/changelists.css
+++ b/django/contrib/admin/static/admin/css/changelists.css
@@ -1,5 +1,9 @@
 /* CHANGELISTS */
 
+#content-start {
+    overflow-x: auto;
+}
+
 #changelist {
     display: flex;
     align-items: flex-start;
@@ -132,11 +136,10 @@
 /* FILTER COLUMN */
 
 #changelist-filter {
-    flex: 0 0 240px;
     background: var(--darkened-bg);
     border-left: none;
     margin: 0;
-    overflow: auto;
+    order: 1;
 }
 
 @media (forced-colors: active) {
